# livestreamtoagi

./: .alpha-loop.yaml  .env.compose  .env.example  .gitignore  .pre-commit-config.yaml  .venv  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  contribute.yaml  docker-compose.yaml  package.json  plan-issue-526.json  plan-issue-7.md  pyproject.toml  requirements.txt  review-batch.json  review-issue-148.json  review-issue-170.json  review-issue-173.json  review-session.json  ruff.toml  simulations-after-wait.yaml
.alpha-loop/: context.md  self-improvement-proposal.json  vision.md
.alpha-loop/learnings/: issue-1-20260331-191014.md  issue-2-20260331-193634.md  issue-3-20260401-001442.md  issue-395-20260507-182355.md  issue-396-20260507-182430.md  issue-397-20260507-184742.md  issue-398-20260507-184804.md  issue-399-20260507-191622.md  issue-4-20260401-003558.md  issue-400-20260507-191647.md  issue-401-20260507-194129.md  issue-402-20260507-194153.md  issue-403-20260507-200822.md  issue-404-20260507-200854.md  issue-405-20260507-204026.md  issue-406-20260507-204049.md  issue-407-20260507-210537.md  issue-408-20260507-210606.md  issue-409-20260507-213054.md  issue-410-20260507-213118.md  issue-411-20260507-214650.md  issue-412-20260507-214714.md  issue-413-20260507-221225.md  issue-414-20260507-221252.md  issue-415-20260507-222751.md  issue-416-20260507-222820.md  issue-418-20260508-004738.md  issue-419-20260508-004809.md  issue-420-20260508-012117.md  issue-421-20260508-012145.md  issue-422-20260508-014834.md  issue-423-20260508-014901.md  issue-424-20260508-021746.md  issue-425-20260508-021812.md  issue-426-20260508-024826.md  issue-427-20260508-024851.md  issue-428-20260508-031438.md  issue-429-20260508-031501.md  issue-430-20260508-134500.md  issue-431-20260508-142420.md  (+122 more)
.alpha-loop/templates/: instructions.md  instructions.md.bak
.claude/: project-context.md
.codex/agents/: implementer.md  reviewer.md
.github/workflows/: ci.yml  security.yml
agents/: implementer.md  reviewer.md
agents/alpha/: behaviors.yaml  config.yaml  system_prompt.md
agents/aurora/: behaviors.yaml  config.yaml  system_prompt.md
agents/fork/: behaviors.yaml  config.yaml  system_prompt.md
agents/grok/: behaviors.yaml  config.yaml  system_prompt.md
agents/management/: behaviors.yaml  config.yaml  content_rules.yaml  intervention_levels.yaml  system_prompt.md
agents/overseer/: behaviors.yaml  config.yaml  content_rules.yaml  (+2 more)
config/: conversation_config.yaml  event_config.yaml  office_layout.json  pixellab_assets.json  pixellab_style_guide.txt  recurring_personas.yaml
core/: admin_routes.py  agent_economy.py  agent_goals.py  agent_needs.py  agent_registry.py  agent_state.py  blog.py  bootstrap.py  config_loader.py  constants.py  context_assembly.py  conversation_engine.py  conversation_mode.py  cost_governor.py  database.py  event_bus.py  exceptions.py  idle_behavior.py  kill_switch.py  llm_client.py  main.py  management.py  model_config.py  models.py  overseer.py  public_routes.py  redis_client.py  redis_keys.py  run_spec.py  scheduler.py  shared_state.py  speech_parser.py  system_prompt.py  tool_executor.py  tts.py
db/: __main__.py  init.sql  migrate.py
docker/: README-minecraft-server.md
docs/: .mc-pivot-issues.json  E16-DRAFT-pluggable-memory-backend.md  MINECRAFT-PIVOT-ISSUE-PLAN.md  MINECRAFT-REPLAY.md  OPEN_SOURCE_AUDIT_REPORT.md  OPEN_SOURCE_READINESS.md  README.md  SCENARIO-AUTHORING.md  cost-kill-audit.md  eval-embodied.md  kill-switch-operator.md  model-configuration.md  run-modes.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
research/: FUNDING-AND-CREDIBILITY-STRATEGY.md  PAPER-INDEX.md  RESEARCH-ANALYSIS-2026.md  RESEARCH-PROGRAM-AND-CONTENT-STRATEGY.md
sandbox/: Dockerfile
scenarios/: ab_test.yaml  awakening.yaml  budget_crisis.yaml  drama.yaml  dream_cycle_test.yaml  dream_smoke_test.yaml  dress_rehearsal.yaml  embodied_reflection_continuity_test.yaml  experimental_short_run.yaml  faction_emergence_test.yaml  first_48h.yaml  full_day.yaml  full_evolution_7d.yaml  goal_generation_test.yaml  initiative_test.yaml  local_llm_validation.yaml  novelty_injection_test.yaml  open_settlement_90m.yaml  open_settlement_smoke.yaml  persistent_24x7.yaml  quick_smoke.yaml  state_and_config_test.yaml  survival_pressure_test.yaml  tool_coverage.yaml  tool_coverage_missing.yaml  topic_exhaustion_test.yaml  two_team_civilization_75m.yaml
scripts/: backfill_assertions.py  backfill_energy_timeline.py  backfill_real_duration.py  backfill_relationship_sentiment.py  bench_memory_bridge.py  build_in_minecraft.py  chat.py  check-services.sh  check_local_llm.py  check_tool_coverage.py  export_bridge_schemas.py  generate_office_tilemap.py  overnight_e22_runs.sh  publish_simulation_youtube.py  render_simulation_video.py  replay_in_minecraft.py  report_simulation.py  restore_memory.py  run-pytest.sh  run_eval.py  run_evolution.py  run_headless_sim.py  run_reflection_test.py  run_simulation.py  run_tool_coverage.sh  seed_config.py  smoke_propose_new_building.py  snapshot_memory.py  test_agent.py  test_sim_isolation.py  validate_scenario.py  verify-render.sh  verify_simulation.py  watch_conversations.py
snapshots/: conflict.json  day3_normal.json  mature.json
specs/: AGENT-AUTONOMY-EVAL-STRATEGY.md  CHARACTER-SHEETS.md  CONVERSATION-ENGINE.md  ENGINEERING-SPECS.md  FINAL-IMPLEMENTATION-PLAN.md  HUMAN-CHECKLIST.md  LOCAL-LLM-VALIDATION-PLAN.md  MEMORY-SYSTEM.md  MINECRAFT-PIVOT-CONTEXT.md  OFFICE-IMAGE-PROMPTS.md  TOOL-DEFINITIONS.md
tools/: __init__.py  alpha_dispatch.py  audience.py  audience_tools.py  base.py  build_tools.py  character_tools.py  civilization.py  code_execution.py  economy_tools.py  journal_image_tool.py  memory_tools.py  messaging.py  revenue_tools.py  self_modification.py  social_tools.py  stubs.py  task_management.py  tilemap_gen.py  web_tools.py  world_state.py
website/: .env.example  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
(+1371 files in other folders)
