[project]
name = "livestream-agi"
version = "0.1.0"
description = "24/7 AI reality show — 9 agents in a pixel art world"
requires-python = ">=3.12,<3.14"
dependencies = [
    "crewai>=0.80.0",
    "openai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pgvector>=0.3.0",
    "alembic>=1.14.0",
    "redis>=5.0.0",
    "edge-tts>=6.1.0",
    "langfuse>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "apscheduler>=3.10.0,<4.0.0",
    "rich>=13.0.0",
    "watchfiles>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "tools*", "agents*"]

[tool.pytest.ini_options]
testpaths = ["tests/backend"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "integration: requires running Docker Compose services",
]
