[project]
name = "livestream-agi"
version = "0.1.0"
description = "24/7 AI reality show — 9 agents in a pixel art world"
requires-python = ">=3.12,<3.14"
dependencies = [
    "crewai>=0.80.0",
    "openai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pgvector>=0.3.0",
    "alembic>=1.14.0",
    "redis>=5.0.0",
    "edge-tts>=6.1.0",
    "langfuse>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "apscheduler>=3.10.0,<4.0.0",
    "rich>=13.0.0",
    "watchfiles>=0.21.0",
    "docker>=7.0.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pre-commit>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "tools*", "agents*"]

[tool.mypy]
python_version = "3.13"
# Strict typing is aspirational. The codebase has many `Any` flows from
# asyncpg row dicts and dynamic Pydantic models that fall outside the scope
# of this PR; tracked as separate cleanup work.
warn_unused_configs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
# Disable the categories that fire mostly on untyped third-party data plumbing
# (asyncpg.Record → dict, yaml.safe_load → Any, Counter without type args).
disable_error_code = [
    "arg-type",
    "attr-defined",
    "operator",
    "misc",
    "index",
    "union-attr",
    "valid-type",
    "var-annotated",
    "type-arg",
    "no-any-return",
    "import-untyped",
    "assignment",
    "unreachable",
    # `name-defined` fires on TYPE_CHECKING imports of dynamic modules
    # (e.g. `docker.DockerClient`); `from __future__ import annotations`
    # makes these strings at runtime, so they are not actually undefined.
    "name-defined",
    # urlparse hostname is `str | bytes | None`; we always pass str URLs.
    "str-bytes-safe",
]

[tool.bandit]
exclude_dirs = ["tests"]
# All medium-severity findings reviewed:
#  - B608: f-strings in SQL build dynamic table/column names but the row data
#    is still passed through asyncpg parameter binding ($1, $2, ...).
#  - B108: hardcoded `/tmp` paths only execute inside the gVisor Docker
#    sandbox, where `/tmp` is mounted as a fresh tmpfs.
#  - B104: the only "0.0.0.0" reference is in a deny-list that *blocks* SSRF
#    attempts to internal interfaces, not a server bind.
skips = ["B608", "B108", "B104"]

[[tool.mypy.overrides]]
module = [
    "crewai.*",
    "edge_tts.*",
    "langfuse.*",
    "docker.*",
    "apscheduler.*",
    "pgvector.*",
    "watchfiles.*",
    "asyncpg.*",
    "yaml.*",
    "redis.*",
    "httpx.*",
    "PIL.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/backend", "tests/integration"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "integration: requires running Docker Compose services",
]
